# cs248-basic-opengl

./: .gitignore  Makefile  Makefile.in  README.md  common.h  config.h.in  configure  configure.ac  main.c
autom4te.cache/: output.1  traces.0  traces.1
demo/: demo.sln
src/: Makefile.am  Makefile.in  common.h
vs2008/: demo.vcproj
vs2008/Debug/: BuildLog.htm  demo.ilk  mt.dep  vc90.idb
xcode/: xcode.1
xcode/xcode.xcodeproj/: Matt.mode1v3  Matt.pbxuser  project.pbxproj
